Subo codigo de la prueba

--- a/Front/src/app/app.component.html
+++ b/Front/src/app/app.component.html
@@ -14,10 +14,10 @@
   <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
     <img
       class="avatar mat-elevation-z8"
-      src="https://source.unsplash.com/c_GmwfHBDzk/200x200"
+      src="https://avatars.githubusercontent.com/u/3068257?s=400&u=83551cea9fa540b5623a0305102daa020b2f9cfc&v=4"
     />
 
-    <h4 class="name">John Smith</h4>
+    <h4 class="name">Jose Antonio Sarria</h4>
     <p class="designation">Software Engineer</p>
 
     <mat-divider></mat-divider>
@@ -34,13 +34,10 @@
       <mat-icon>info</mat-icon>
       <span>About</span>
     </button>
-    <button mat-button class="menu-button" routerLink="/producto">
-      <mat-icon>info</mat-icon>
-      <span>Producto</span>
-    </button>
+
     <button mat-button class="menu-button" routerLink="/persona">
       <mat-icon>info</mat-icon>
-      <span>Persona</span>
+      <span>Crud Persona</span>
     </button>
     <mat-divider></mat-divider>
 
